# agent-shell

./: CHANGELOG.md  Cargo.toml  README.md  README_zh.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  server.rs
crates/core/: Cargo.toml
crates/core/src/: attach.rs  config.rs  lib.rs  mouse.rs  protocol.rs  recording.rs  replay.rs  ringbuf.rs  session.rs  term_emulator.rs  terminal.rs  vte_grid.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs  server.rs
crates/e2e/: Cargo.toml
crates/e2e/src/: lib.rs
crates/e2e/tests/: integration.rs
docs/: architecture.md  glossary.md
skills/agent-shell/: SKILL.md
specs/: design-agent-shell-2026-05-13.md  design-attach-render-tests-2026-05-14.md  design-mouse-input-2026-05-15.md  design-recording-audit-2026-05-15.md  design-replay-tui-fix-2026-05-19.md
