[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/e2e",
]
resolver = "2"

[workspace.dependencies]
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.29", features = ["process", "signal", "term", "poll"] }
toml = "0.8"
base64 = "0.22"
alacritty_terminal = "0.26"
log = "0.4"
