[package]
name = "agent-shell-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-shell"
path = "src/main.rs"

[dependencies]
agent-shell-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
nix = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
