[package]
name = "agent-shell-core"
version = "0.1.0"
edition = "2021"

[dependencies]
portable-pty = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
nix = { workspace = true }
toml = { workspace = true }
alacritty_terminal = { workspace = true }
log = { workspace = true }
base64 = { workspace = true }
shellexpand = "2"
shell-words = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
