[package]
name = "agent-shell-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-shell-daemon"
path = "src/main.rs"

[dependencies]
agent-shell-core = { path = "../core" }
portable-pty = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
nix = { workspace = true }
toml = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3"
