[package]
name = "agent-shell-e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-shell-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
libc = "0.2"
nix = "0.29"
tempfile = "3"

[dev-dependencies]
